--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -11,14 +11,14 @@
       <form [formGroup]="form">
         <div class="form-group">
           <label>Email address</label>
-          <input type="email" formControlName="email" class="form-control">
+          <input type="email"  id="fmail" formControlName="email" class="form-control">
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input type="password" class="form-control" formControlName="password">
+          <input type="password"  id="fpassword" class="form-control" formControlName="password">
           <label class="error">{{errorMessage}}</label>
         </div>
-        <button type="submit" (click)="tryLogin(form.value)" class="btn btn-primary">Login</button>
+        <button type="submit"  id="pLoginBtn" (click)="tryLogin(form.value)" class="btn btn-primary">Login</button>
       </form>
     </div>
   </div>
