--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,16 +13,16 @@
       <ul class="navbar-nav ml-auto">
           <li class="divider"></li>
 
-        <li  *ngIf="(loggedIn$ | async); else loggedOut" class="nav-item">
-          <a class="nav-link" style="cursor: pointer;" (click)="logout()">Logout</a>
+        <li  *ngIf="(loggedIn$ | async); else loggedOut" class="nav-item" >
+          <a class="nav-link" style="cursor: pointer;" (click)="logout()" id="logOutBtn">Logout</a>
         </li>
 
         <ng-template #loggedOut>
           <li class="nav-item">
-            <a class="nav-link" href="/login" >Login</a>
+            <a class="nav-link" href="/login" id="nlogInBtn">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/register">Register</a>
+            <a class="nav-link" href="/register" id="registerBtn">Register</a>
         </li>
         </ng-template>
 
