--- a/src/app/equation/components/main/main.component.html
+++ b/src/app/equation/components/main/main.component.html
@@ -12,14 +12,7 @@
   </div>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <div class="input-group">
-        <textarea
-          class="form-control shadow-sm p-3 mb-3 bg-white rounded"
-          id="Editor"
-          rows="7"
-          placeholder="Use Symbols below to type in your formula"
-        ></textarea>
-      </div>
+      <app-editor></app-editor>
     </div>
   </div>
   <br />
@@ -31,14 +24,7 @@
 
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <div class="input-group">
-        <textarea
-          class="form-control shadow-sm p-3 mb-3 bg-white rounded"
-          id="translation"
-          rows="3"
-          disabled="true"
-        ></textarea>
-      </div>
+      <app-latex-translation></app-latex-translation>
     </div>
   </div>
   <br />
