bind equation input to reactive form

--- a/src/app/equation/components/editor/editor.component.html
+++ b/src/app/equation/components/editor/editor.component.html
@@ -4,5 +4,5 @@
     id="Editor"
     rows="7"
     placeholder="Use Symbols below to type in your formula"
-  ></textarea>
+    [formControl]="form.controls['equation']"></textarea>
 </div>
