--- a/src/app/equation/components/editor/editor.component.html
+++ b/src/app/equation/components/editor/editor.component.html
@@ -1,8 +1,9 @@
-<div class="input-group">
+<form>
   <textarea
     class="form-control shadow-sm p-3 mb-3 bg-white rounded"
     id="Editor"
     rows="7"
     placeholder="Use Symbols below to type in your formula"
-    [formControl]="form.controls['equation']"></textarea>
-</div>
+    [formControl]="form.controls['equation']"
+  ></textarea>
+</form>
