--- a/src/app/equation/components/latex-translation/latex-translation.component.html
+++ b/src/app/equation/components/latex-translation/latex-translation.component.html
@@ -1,8 +1,8 @@
-<div class="input-group">
+<form>
   <textarea
     class="form-control shadow-sm p-3 mb-3 bg-white rounded"
     id="translation"
     rows="3"
     disabled="true"
-  ></textarea>
-</div>
+  >{{inputEquation | async}}</textarea>
+</form>
