add asciiMath to tex translator

--- a/src/app/equation/components/latex-translation/latex-translation.component.html
+++ b/src/app/equation/components/latex-translation/latex-translation.component.html
@@ -4,5 +4,5 @@
     id="translation"
     rows="3"
     disabled="true"
-  >{{inputEquation | async}}</textarea>
+  >{{translatedEquation | async}}</textarea>
 </form>
