made deployment ready

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,5 +1,6 @@
 <ul>
-  <li  *ngIf="authService.isLoggedIn" class="nav-item">
-    <a class="nav-link"  (click)="authService.logout()">Logout</a>
+  <li > Do we need this?
   </li>
 </ul>
+
+
