--- a/src/app/equation/components/editor/editor.component.html
+++ b/src/app/equation/components/editor/editor.component.html
@@ -3,7 +3,7 @@
     class="form-control shadow-sm p-3 mb-3 bg-white rounded"
     id="Editor"
     rows="7"
-    placeholder="Use Symbols below to type in your formula"
+    placeholder="Use Ascii Math input and/or the symbolbar"
     [formControl]="form.controls['equation']"
   ></textarea>
 </form>
