--- a/src/app/equation/components/main/main.component.html
+++ b/src/app/equation/components/main/main.component.html
@@ -7,7 +7,7 @@
   <br />
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      Editor
+      Ascii Math Input (<a href="http://asciimath.org/" target="_blank">?</a>)
     </div>
   </div>
   <div class="row">
@@ -34,9 +34,4 @@
       </div>
     </div>
   <br />
-  <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-      <p>Need help?</p>
-    </div>
-  </div>
 </div>
