--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -18,7 +18,7 @@
           <input type="password" class="form-control" formControlName="password">
           <label class="error">{{errorMessage}}</label>
         </div>
-        <button type="submit" (click)="tryLogin(form.value)" class="btn btn-primary">Login</button>
+        <button type="submit" (click)="tryLogin(form.value)" class="btn btn-primary" [class.spinner-grow]="loading"><ng-container *ngIf="!loading">Login</ng-container></button>
       </form>
     </div>
   </div>
