--- a/src/app/authentication/components/register/register.component.html
+++ b/src/app/authentication/components/register/register.component.html
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
@@ -20,7 +19,7 @@
           <label class="error">{{errorMessage}}</label>
           <label class="success">{{successMessage}}</label>
         </div>
-        <button type="submit" (click)="tryRegister(form.value)" class="btn btn-primary">Register</button>
+        <button type="submit" (click)="tryRegister(form.value)" class="btn btn-primary" [class.spinner-grow]="loading"><ng-container *ngIf="!loading">Register</ng-container></button>
       </form>
     </div>
   </div>
