implement symbol bar

--- a/src/app/equation/components/symbol/symbol.component.html
+++ b/src/app/equation/components/symbol/symbol.component.html
@@ -1,4 +1,4 @@
-
-    <li class="nav-item active">
-      <a class="nav-link symbol" (click)="onClick($event)">&#8719; </a>
-    </li>
+<a
+  class="nav-link symbol"
+  (click)="updateEquation($event)"
+>{{htmlCode}}</a>
