--- a/src/app/equation/components/symbolbar/symbolbar.component.html
+++ b/src/app/equation/components/symbolbar/symbolbar.component.html
@@ -1,8 +1,40 @@
 <nav class="navbar navbar-default navbar-dark fixed-bottom">
-  <div class="navbar-brand">
-    Symbols
-  </div>
+  <div class="navbar-brand">Symbols</div>
+
   <ul class="navbar-nav mr-auto">
-    <app-symbol></app-symbol>
+    <li class="nav-item">
+      <app-symbol
+        asciiMath="sum"
+        htmlCode="&sum;"
+      ></app-symbol>
+    </li>
+
+    <li class="nav-item">
+      <app-symbol
+        asciiMath="sqrt()"
+        htmlCode="&radic;"
+      ></app-symbol>
+    </li>
+
+    <li class="nav-item">
+      <app-symbol
+        asciiMath="prod"
+        htmlCode="&prod;"
+      ></app-symbol>
+    </li>
+
+    <li class="nav-item">
+      <app-symbol
+        asciiMath="uu"
+        htmlCode="&cup;"
+      ></app-symbol>
+    </li>
+
+    <li class="nav-item">
+      <app-symbol
+        asciiMath="nn"
+        htmlCode="&cap;"
+      ></app-symbol>
+    </li>
   </ul>
 </nav>
