--- a/src/app/equation/components/symbolbar/symbolbar.component.scss
+++ b/src/app/equation/components/symbolbar/symbolbar.component.scss
@@ -14,6 +14,7 @@ $colHighlight: #e6b2c6;
   .navbar-text {
     color: $colDefault; }
   .navbar-nav {
+      display: inline;
     > li {
       > a {
         color: $colDefault;
@@ -33,13 +34,12 @@ $colHighlight: #e6b2c6;
       background-color: $bgHighlight; }
     .icon-bar {
       background-color: $colDefault; }}
-  .navbar-collapse,
   .navbar-form {
     border-color: $colDefault; }
   .navbar-link {
-    color: $colDefault;
+    color: $colHighlight;
     &:hover {
-      color: $colHighlight; }
+      color: $colDefault; }
       }
       .custom-toggler .navbar-toggler-icon {
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
@@ -61,7 +61,3 @@ $colHighlight: #e6b2c6;
         background-color: $bgHighlight; }}}
 }
 
-.divider{
-  color: #ECEFF1;
-  background-color: #882a4e;
-}
