--- a/src/app/equation/components/symbolbar/symbolbar.component.html
+++ b/src/app/equation/components/symbolbar/symbolbar.component.html
@@ -1,36 +1,36 @@
 <nav class="navbar navbar-default navbar-dark fixed-bottom">
   <div class="navbar-brand">Symbols</div>
 
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item">
+  <ul class="navbar-nav mr-auto list-inline">
+    <li class="nav-item list-inline-item">
       <app-symbol
         asciiMath="sum"
         htmlCode="&sum;"
       ></app-symbol>
     </li>
 
-    <li class="nav-item">
+    <li class="nav-item list-inline-item">
       <app-symbol
         asciiMath="sqrt()"
         htmlCode="&radic;"
       ></app-symbol>
     </li>
 
-    <li class="nav-item">
+    <li class="nav-item list-inline-item">
       <app-symbol
         asciiMath="prod"
         htmlCode="&prod;"
       ></app-symbol>
     </li>
 
-    <li class="nav-item">
+    <li class="nav-item list-inline-item">
       <app-symbol
         asciiMath="uu"
         htmlCode="&cup;"
       ></app-symbol>
     </li>
 
-    <li class="nav-item">
+    <li class="nav-item list-inline-item">
       <app-symbol
         asciiMath="nn"
         htmlCode="&cap;"
