add symbolbar e2e test

--- a/src/app/equation/components/symbolbar/symbolbar.component.html
+++ b/src/app/equation/components/symbolbar/symbolbar.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-default navbar-dark fixed-bottom">
-  <div class="navbar-brand">Symbols</div>
+  <div class="navbar-brand" id="symbolNavBar" >Symbols</div>
 
   <ul class="navbar-nav mr-auto list-inline">
-    <li class="nav-item list-inline-item">
+    <li class="nav-item list-inline-item" id="iconSum">
       <app-symbol
         asciiMath="sum"
         htmlCode="&sum;"
